--- a/skeletonview/skeletonview.csproj
+++ b/skeletonview/skeletonview.csproj
@@ -106,9 +106,12 @@
     <PackageReference Include="Xamarin.Android.ShimmerLayout">
       <Version>0.5.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.5" />
-    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.0.0.1" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.4.1" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.5.0" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
+    <PackageReference Include="XamarinLibrary.Xamarin.Android.Facebook.Shimmer">
+      <Version>0.5.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\rowitem.xml">
